# capra_web_ui

./: .babelrc  .editorconfig  .env  .eslintignore  .eslintrc  .eslintrc.js  .gitattributes  .gitignore  .huskyrc.js  .nsprc  .prettierignore  .prettierrc.json  .stylelintignore  .travis.yml  README.md  babel.config.js  config-overrides.js  env.d.ts  index.html  jest.config.js  jest.config.ts  jsconfig.json  package-lock.json  package.json  postcss.config.js  snowpack.config.js  tsconfig.app.json  tsconfig.config.json  tsconfig.jest.json  tsconfig.json  vite.config.ts  vue.config.js  workflow_cleanup.ps1
.github/workflows/: build-release.yml  ci.yml  dependencies.yml  install.yml  test-build-release-2.yml  test-build-release.yml  test.yml
doc/adr/: 2020-05-14-Electron.md  2020-05-14-switch_to_react.md
doc/architecture_decision_record/: 2020-09-25-parcel-bundler.md  2021-03-09-snowpack.md  2023-09-23-tauri-vue-vite.md  YYYY-MM-DD-example.md
patches/: @types+roslib+1.9.0.patch  chalk+5.0.0.patch  logform+2.2.0.patch  roslib+1.1.0.patch
public/: 404.html  index.html  manifest.json  test.dae
script/: rtspServer.js
src/: App.js  App.styles.ts  App.tsx  App.vue  RosClient.ts  fontAwesome.ts  global.d.ts  index.ejs  index.tsx  main.js  main.ts  png.d.ts  router.js  router.ts  serviceWorker.ts  shims-tsx.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/protos/: CapraMessages.proto
types/: ros3d.d.ts  vue-bulma-components.d.ts
vitest/: setup.ts
(+476 files in other folders)
