[package]
name = "capra_tauri_ui"
version = "0.0.0"
description = "User Interface for ROS based robots"
authors = ["Club Capra <capra@ens.etsmtl.ca>"]
license = "GPL-3.0"
repository = "https://github.com/clubcapra/capra_web_ui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = { version = "0.33.0", features = ["bundled"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
